Body Alignment fixed

--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 body {
     max-width: 1280px;
     width: 100%;
-    margin: 0;
-    padding: px;
+    margin: 0 auto;
+    padding: 0;
     font-family: 'Inter', sans-serif;
 }
 
@@ -365,7 +365,7 @@ h4 {
 
 .faq-container p {
     font-family: 'Inter', sans-serif;
-    text-align: justify;
+    text-align: ;
     font-weight: 500;
     margin-top: 10px;
     margin-left: 20px;
